@@ -81,4 +81,20 @@ class ZMAdminEventHandler {
         }
     }
 
+    /**
+     * Load zen cart style define configs
+     *
+     * @todo: remove and load individual values as required
+     */
+    public function onZMAppInitDone($args) {
+        //** load all config values if not set **//
+        if (!defined('STORE_NAME')) {
+            foreach (ZMConfig::instance()->loadAll() as $key => $value) {
+                define($key, $value);
+            }
+            // set shared defaults again as some settings depend on zencart settings...
+            ZMSettings::addAll(zm_get_default_settings());
+        }
+    }
+
 }
